feat: :fire: New Swagger docs
